log/output_20240501_150023.log
  File "/home/liubanruo/229codev6/train.py", line 7
    global data_path = r'/home/liubanruo/test_data/data229'
                     ^
SyntaxError: invalid syntax
